--- a/Bk.html
+++ b/Bk.html
@@ -4,18 +4,74 @@
 <meta charset="UTF-8">
 <title>Bike Ledger</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
-body{font-family:Arial;background:#f4f4f4;padding:15px}
-h2{text-align:center}
-button,input{width:100%;padding:10px;margin:6px 0;font-size:16px}
-button{background:#333;color:#fff;border:none;border-radius:4px}
-table{width:100%;border-collapse:collapse;margin-top:15px;background:#fff}
-th,td{border:1px solid #ccc;padding:6px;text-align:center}
-th{background:#222;color:#fff}
-.paid{color:green;font-weight:bold}
-.partial{color:orange;font-weight:bold}
-.due{color:red;font-weight:bold}
-#msg{text-align:center;font-weight:bold;margin:10px 0}
+body{font-family:system-ui;background:#fff7ee;margin:0;padding:12px}
+h2{text-align:center;margin:8px 0}
+
+.header{
+  background:#f3d3a1;
+  padding:14px;
+  border-radius:12px;
+  margin-bottom:10px
+}
+.summary{
+  display:flex;
+  justify-content:space-between;
+  font-weight:bold
+}
+.summary .due{color:#c0392b}
+.summary .paid{color:#1e8449}
+
+.card{
+  background:#fff;
+  border-radius:12px;
+  padding:12px;
+  margin-bottom:10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  box-shadow:0 2px 6px rgba(0,0,0,.08)
+}
+.avatar{
+  width:42px;height:42px;border-radius:50%;
+  background:#f1c40f;
+  display:flex;align-items:center;justify-content:center;
+  font-weight:bold
+}
+.name{font-weight:bold}
+.time{font-size:12px;color:#777}
+.amount{font-weight:bold;color:#c0392b}
+
+button{
+  padding:10px;
+  border:none;
+  border-radius:8px;
+  background:#333;
+  color:#fff;
+  font-size:15px
+}
+
+.fab{
+  position:fixed;
+  right:20px;
+  bottom:20px;
+  background:#d32f2f;
+  width:56px;
+  height:56px;
+  border-radius:50%;
+  font-size:28px
+}
+
+input,select{
+  width:100%;
+  padding:10px;
+  margin:6px 0;
+  border-radius:6px;
+  border:1px solid #ccc
+}
+
+.hidden{display:none}
 </style>
 </head>
 
@@ -24,159 +80,170 @@ th{background:#222;color:#fff}
 <h2>🚴 Bike Ledger</h2>
 
 <button id="loginBtn">Google দিয়ে Login</button>
-<button id="logoutBtn" style="display:none">Logout</button>
+<button id="logoutBtn" class="hidden">Logout</button>
 
-<div id="app" style="display:none">
+<!-- HOME -->
+<div id="home" class="hidden">
+  <div class="header">
+    <div class="summary">
+      <div class="due">মোট পাওনা<br>৳ <span id="totalDue">0</span></div>
+      <div class="paid">মোট আদায়<br>৳ <span id="totalPaid">0</span></div>
+    </div>
+  </div>
+  <div id="list"></div>
+  <button class="fab" onclick="openAdd()">+</button>
+</div>
 
-<input id="name" placeholder="যাত্রীর নাম">
-<input id="fare" type="number" placeholder="মোট ভাড়া">
-<input id="paid" type="number" placeholder="এখন পাওয়া টাকা">
+<!-- ADD RIDE -->
+<div id="add" class="hidden">
+  <h3>➕ ভাড়া যোগ</h3>
+  <select id="passenger"></select>
+  <input id="newPassenger" placeholder="নতুন যাত্রীর নাম (একবার)">
+  <button onclick="addPassenger()">যাত্রী যোগ</button>
+  <input id="fare" type="number" placeholder="মোট ভাড়া">
+  <input id="paid" type="number" placeholder="এখন পাওয়া">
+  <button onclick="saveRide()">সেভ করুন</button>
+  <button onclick="backHome()">← Back</button>
+</div>
 
-<button onclick="saveOffline()">অফলাইনে সেভ করুন</button>
-
-<p id="msg"></p>
-
-<table>
-<thead>
-<tr>
-<th>নাম</th>
-<th>সময়</th>
-<th>ভাড়া</th>
-<th>পাওয়া</th>
-<th>বাকি</th>
-<th>স্ট্যাটাস</th>
-</tr>
-</thead>
-<tbody id="list"></tbody>
-</table>
-
+<!-- DETAILS -->
+<div id="details" class="hidden">
+  <h3 id="dName"></h3>
+  <div id="dTotal"></div>
+  <div id="dList"></div>
+  <button id="smsBtn">📩 SMS পাঠান</button>
+  <button onclick="backHome()">← Back</button>
 </div>
 
 <script type="module">
-/* ===== Firebase CDN Imports ===== */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged }
 from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
-import { getFirestore, addDoc, collection }
+import { getFirestore, collection, addDoc, getDocs, query, where }
 from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
 
-/* ===== YOUR FIREBASE CONFIG ===== */
+/* 🔴 YOUR FIREBASE CONFIG */
 const firebaseConfig = {
   apiKey: "AIzaSyCXs85Y0GzKbQqY5V3yQY-MysMl_4ABk9U",
   authDomain: "bikeledger2k.firebaseapp.com",
   projectId: "bikeledger2k",
-  storageBucket: "bikeledger2k.firebasestorage.app",
-  messagingSenderId: "791926507922",
   appId: "1:791926507922:web:d6ee8ca94a505eed4d194b"
 };
 
-/* ===== Init ===== */
 const app = initializeApp(firebaseConfig);
 const auth = getAuth();
 const db = getFirestore();
 const provider = new GoogleAuthProvider();
 
-/* ===== UI ===== */
-const loginBtn = document.getElementById("loginBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const appDiv = document.getElementById("app");
-const msg = document.getElementById("msg");
-const list = document.getElementById("list");
+let user=null, rides=[], passengers=[];
 
-const nameEl = document.getElementById("name");
-const fareEl = document.getElementById("fare");
-const paidEl = document.getElementById("paid");
+/* UI refs */
+const home=document.getElementById("home");
+const add=document.getElementById("add");
+const details=document.getElementById("details");
 
-/* ===== Local Storage ===== */
-let records = JSON.parse(localStorage.getItem("offlineData")) || [];
-let currentUser = null;
+/* LOGIN */
+loginBtn.onclick=()=>signInWithPopup(auth,provider);
+logoutBtn.onclick=()=>signOut(auth);
 
-/* ===== Login / Logout ===== */
-loginBtn.onclick = () => signInWithPopup(auth, provider);
-logoutBtn.onclick = () => signOut(auth);
-
-/* ===== Auth State ===== */
-onAuthStateChanged(auth, user=>{
-  if(user){
-    currentUser = user;
-    loginBtn.style.display="none";
-    logoutBtn.style.display="block";
-    appDiv.style.display="block";
-    msg.innerText = "👤 Logged in: " + user.email;
-    show();
-    if(navigator.onLine) autoBackup();
-  }else{
-    currentUser = null;
-    loginBtn.style.display="block";
-    logoutBtn.style.display="none";
-    appDiv.style.display="none";
+onAuthStateChanged(auth, async u=>{
+  if(u){
+    user=u;
+    loginBtn.classList.add("hidden");
+    logoutBtn.classList.remove("hidden");
+    home.classList.remove("hidden");
+    await loadPassengers();
+    await loadRides();
+    renderHome();
   }
 });
 
-/* ===== Save Offline ===== */
-window.saveOffline = function(){
-  if(!currentUser) return alert("Login করুন");
+/* LOAD DATA */
+async function loadPassengers(){
+  passengers=[];
+  const snap=await getDocs(collection(db,"users",user.uid,"passengers"));
+  snap.forEach(d=>passengers.push(d.data().name));
+}
 
-  const name = nameEl.value;
-  const fare = Number(fareEl.value);
-  const paid = Number(paidEl.value);
+async function loadRides(){
+  rides=[];
+  const snap=await getDocs(collection(db,"users",user.uid,"rides"));
+  snap.forEach(d=>rides.push(d.data()));
+}
 
-  if(!name || !fare) return alert("নাম ও ভাড়া দিন");
-
-  records.push({
-    uid: currentUser.uid,
-    name,
-    fare,
-    paid,
-    due: fare - paid,
-    time: new Date().toLocaleString()
+/* HOME */
+function renderHome(){
+  let due=0,paid=0;
+  list.innerHTML="";
+  rides.forEach(r=>{
+    due+=r.due; paid+=r.paid;
+    list.innerHTML+=`
+    <div class="card" onclick="openDetails('${r.name}')">
+      <div style="display:flex;gap:10px">
+        <div class="avatar">${r.name[0]}</div>
+        <div>
+          <div class="name">${r.name}</div>
+          <div class="time">${r.time}</div>
+        </div>
+      </div>
+      <div class="amount">৳ ${r.due}</div>
+    </div>`;
   });
+  totalDue.innerText=due;
+  totalPaid.innerText=paid;
+}
 
-  localStorage.setItem("offlineData", JSON.stringify(records));
-  nameEl.value=""; fareEl.value=""; paidEl.value="";
-  show();
-  msg.innerText = navigator.onLine ? "🌐 অনলাইনে আছেন" : "📴 অফলাইনে সেভ হয়েছে";
+/* ADD */
+window.openAdd=()=>{
+  home.classList.add("hidden");
+  add.classList.remove("hidden");
+  passenger.innerHTML='<option value="">যাত্রী নির্বাচন</option>';
+  passengers.forEach(p=>passenger.innerHTML+=`<option>${p}</option>`);
 };
 
-/* ===== Auto Backup ===== */
-window.addEventListener("online", autoBackup);
+window.addPassenger=async()=>{
+  const n=newPassenger.value;
+  if(!n) return;
+  await addDoc(collection(db,"users",user.uid,"passengers"),{name:n});
+  newPassenger.value="";
+  loadPassengers();
+};
 
-async function autoBackup(){
-  if(!currentUser) return;
-  const myData = records.filter(r=>r.uid===currentUser.uid);
-  if(myData.length===0) return;
+window.saveRide=async()=>{
+  const name=passenger.value;
+  const fare=+document.getElementById("fare").value;
+  const paid=+document.getElementById("paid").value;
+  if(!name||!fare) return alert("ডাটা দিন");
+  await addDoc(collection(db,"users",user.uid,"rides"),{
+    name,fare,paid,due:fare-paid,time:new Date().toLocaleString()
+  });
+  backHome();
+  await loadRides();
+  renderHome();
+};
 
-  msg.innerText = "⏳ ব্যাকআপ হচ্ছে...";
-  for(let r of myData){
-    await addDoc(collection(db,"users",currentUser.uid,"backup"), r);
-  }
+/* DETAILS */
+window.openDetails=(name)=>{
+  home.classList.add("hidden");
+  details.classList.remove("hidden");
+  dName.innerText=name;
+  const list2=rides.filter(r=>r.name===name);
+  let total=0;
+  dList.innerHTML="";
+  list2.forEach(r=>{
+    total+=r.due;
+    dList.innerHTML+=`<div>${r.time} — বাকি ৳${r.due}</div>`;
+  });
+  dTotal.innerHTML=`মোট বাকি: ৳ ${total}`;
+  smsBtn.href=`sms:?body=প্রিয় ${name}, আপনার মোট বাকি ভাড়া ${total} টাকা।`;
+};
 
-  records = records.filter(r=>r.uid!==currentUser.uid);
-  localStorage.setItem("offlineData", JSON.stringify(records));
-  show();
-  msg.innerText = "✅ Backup Successful";
-}
-
-/* ===== Show Table ===== */
-function show(){
-  list.innerHTML = records
-    .filter(r=>currentUser && r.uid===currentUser.uid)
-    .map(r=>{
-      let status = r.due==0 ? "Paid" : (r.paid==0 ? "Due" : "Partial");
-      let cls = status=="Paid"?"paid":status=="Due"?"due":"partial";
-      return `
-      <tr>
-        <td>${r.name}</td>
-        <td>${r.time}</td>
-        <td>${r.fare}</td>
-        <td>${r.paid}</td>
-        <td>${r.due}</td>
-        <td class="${cls}">${status}</td>
-      </tr>`;
-    }).join("");
-}
-
-show();
+/* BACK */
+window.backHome=()=>{
+  add.classList.add("hidden");
+  details.classList.add("hidden");
+  home.classList.remove("hidden");
+};
 </script>
 
 </body>
