--- a/Bk.html
+++ b/Bk.html
@@ -121,7 +121,7 @@ button{
   <h3 id="dName"></h3>
   <div id="dTotal"></div>
   <div id="dList"></div>
-  <button id="smsBtn">📩 SMS পাঠান</button>
+  <a id="smsBtn"><button>📩 SMS পাঠান</button></a>
   <button onclick="backHome()">← Back</button>
 </div>
 
@@ -132,7 +132,7 @@ from "https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, getDocs }
 from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
 
-/* 🔴 YOUR FIREBASE CONFIG */
+/* 🔴 Firebase config */
 const firebaseConfig = {
   apiKey: "AIzaSyCXs85Y0GzKbQqY5V3yQY-MysMl_4ABk9U",
   authDomain: "bikeledger2k.firebaseapp.com",
@@ -149,33 +149,46 @@ const provider = new GoogleAuthProvider();
 let user=null;
 let rides=[];
 let passengers=[];
+let currentScreen="home";
 
-/* UI */
-const home = document.getElementById("home");
-const add = document.getElementById("add");
-const details = document.getElementById("details");
-const list = document.getElementById("list");
+/* UI refs */
+const home=document.getElementById("home");
+const add=document.getElementById("add");
+const details=document.getElementById("details");
+const list=document.getElementById("list");
 
 /* AUTH */
-loginBtn.onclick = ()=>signInWithPopup(auth,provider);
-logoutBtn.onclick = ()=>signOut(auth);
+loginBtn.onclick=()=>signInWithPopup(auth,provider);
+logoutBtn.onclick=()=>signOut(auth);
 
 onAuthStateChanged(auth, async u=>{
   if(!u) return;
   user=u;
   loginBtn.classList.add("hidden");
   logoutBtn.classList.remove("hidden");
-  home.classList.remove("hidden");
+
   await loadPassengers();
   await loadRides();
   renderHome();
+  showScreen(currentScreen);
 });
+
+/* SCREEN CONTROL */
+function showScreen(name){
+  home.classList.add("hidden");
+  add.classList.add("hidden");
+  details.classList.add("hidden");
+
+  if(name==="home") home.classList.remove("hidden");
+  if(name==="add") add.classList.remove("hidden");
+  if(name==="details") details.classList.remove("hidden");
+}
 
 /* LOAD DATA */
 async function loadPassengers(){
   passengers=[];
   passenger.innerHTML='<option value="">যাত্রী নির্বাচন করুন</option>';
-  const snap = await getDocs(collection(db,"users",user.uid,"passengers"));
+  const snap=await getDocs(collection(db,"users",user.uid,"passengers"));
   snap.forEach(d=>{
     passengers.push(d.data().name);
     passenger.innerHTML+=`<option>${d.data().name}</option>`;
@@ -184,11 +197,11 @@ async function loadPassengers(){
 
 async function loadRides(){
   rides=[];
-  const snap = await getDocs(collection(db,"users",user.uid,"rides"));
+  const snap=await getDocs(collection(db,"users",user.uid,"rides"));
   snap.forEach(d=>rides.push(d.data()));
 }
 
-/* HOME RENDER */
+/* HOME */
 function renderHome(){
   let due=0, paid=0;
   list.innerHTML="";
@@ -207,18 +220,18 @@ function renderHome(){
       <div class="amount">৳ ${r.due}</div>
     </div>`;
   });
-  totalDue.innerText = due;
-  totalPaid.innerText = paid;
+  totalDue.innerText=due;
+  totalPaid.innerText=paid;
 }
 
-/* ADD FLOW */
-window.openAdd = ()=>{
-  home.classList.add("hidden");
-  add.classList.remove("hidden");
+/* ADD */
+window.openAdd=()=>{
+  currentScreen="add";
+  showScreen("add");
 };
 
-window.addPassenger = async ()=>{
-  const name = newPassenger.value.trim();
+window.addPassenger=async()=>{
+  const name=newPassenger.value.trim();
   if(!name) return alert("নাম লিখুন");
   await addDoc(collection(db,"users",user.uid,"passengers"),{name});
   newPassenger.value="";
@@ -226,20 +239,16 @@ window.addPassenger = async ()=>{
   alert("✅ যাত্রী যোগ হয়েছে");
 };
 
-window.saveRide = async ()=>{
-  const name = passenger.value;
-  const fare = Number(document.getElementById("fare").value);
-  const paid = Number(document.getElementById("paid").value || 0);
+window.saveRide=async()=>{
+  const name=passenger.value;
+  const fare=Number(document.getElementById("fare").value);
+  const paid=Number(document.getElementById("paid").value||0);
 
   if(!name) return alert("যাত্রী নির্বাচন করুন");
   if(!fare) return alert("ভাড়া লিখুন");
 
   await addDoc(collection(db,"users",user.uid,"rides"),{
-    name,
-    fare,
-    paid,
-    due: fare-paid,
-    time: new Date().toLocaleString()
+    name,fare,paid,due:fare-paid,time:new Date().toLocaleString()
   });
 
   document.getElementById("fare").value="";
@@ -252,10 +261,10 @@ window.saveRide = async ()=>{
 };
 
 /* DETAILS */
-window.openDetails = (name)=>{
-  home.classList.add("hidden");
-  details.classList.remove("hidden");
-  dName.innerText = name;
+window.openDetails=(name)=>{
+  currentScreen="details";
+  showScreen("details");
+  dName.innerText=name;
 
   let total=0;
   dList.innerHTML="";
@@ -269,10 +278,9 @@ window.openDetails = (name)=>{
 };
 
 /* BACK */
-window.backHome = ()=>{
-  add.classList.add("hidden");
-  details.classList.add("hidden");
-  home.classList.remove("hidden");
+window.backHome=()=>{
+  currentScreen="home";
+  showScreen("home");
 };
 </script>
 
